--- a/style.css
+++ b/style.css
@@ -37,25 +37,25 @@
     border-top: 1px solid white;;
   }
    
-  .col-1-hour {
+  .col-md-1-hour {
     background-color: #ffffff;
     color: #000000;
     border-top: 1px dashed #000000;
   }
    
-  .past {
+  .past textarea {
     background-color: #d3d3d3;
-    color: white;
+    color: black;
   }
    
-  .present {
+  .present textarea {
     background-color: #ff6961;
-    color: white;
+    color: black;
   }
    
-  .future {
+  .future textarea {
     background-color: #77dd77;
-    color: white;
+    color: black;
   }
    
   .saveBtn {
